--- a/Layout.css
+++ b/Layout.css
@@ -1,8 +1,157 @@
-button{
+
+ 
+  
+ 
+  *{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+
+
+  }
+ 
+
+  body {
+    background: linear-gradient(to left, #8942a8, #ba382f);
+
+    margin-top: -20px;
+  }
+
+  nav {
+    width: 100%;
+    height: 100;
+    
+
+   
+    
     background-color: black;
-    border: black;
-    float: right;
-    color: white; 
-    cursor: pointer;
-    text-align: center; 
- }
+    
+  }
+  ul li {
+    list-style: none;
+    display: inline-block;
+    line-height: 100px;
+  }
+  ul li a {
+    text-decoration: none;
+    font-size: 20px;
+    font-family: Arial;
+    color: white;
+    padding: 0 20px;
+    top: -40px;
+  }
+  ul li a:hover{
+    color: red;
+  }
+
+  #instagram{
+    width: 55px;
+    height: 55px;
+    position: relative;
+    top: 20px;
+    right:  20px;
+    float: right
+  }
+  #facebook{
+    width: 55px;
+    height: 55px;
+    position: relative;
+    top: 2px;
+    right:  40px;
+    float: right
+  }
+
+  .Thai a{
+    
+    
+    width: 30%;
+    border: 15px solid black;
+    padding: 100px;
+    margin: 20px;
+    position: relative;
+    float: left;
+   
+    font-size: 60px;
+    
+  }
+  .Thai:hover{
+    color: red;
+  }
+
+  .Animation{
+    
+    
+    width: 30%;
+    border: 15px solid black;
+    padding: 100px;
+    margin: 20px;
+    position: relative;
+    display: flex;
+    font-size: 60px;
+    float: left;
+    top:0px
+    
+    
+  }
+  .Animation:hover{
+    color: red;
+  }
+
+  .Lov{
+    
+    
+    width: 30%;
+    border: 15px solid black;
+    padding: 100px;
+    margin: 20px;
+    position: relative;
+    float: left;
+   
+    font-size: 60px;
+    
+  }
+  .Lov:hover{
+    color: red;
+  }
+
+  .Historia{
+    
+    
+    width: 30%;
+    border: 15px solid black;
+    padding: 100px;
+    margin: 20px;
+    position: relative;
+    float: left;
+   
+    font-size: 60px;
+    
+  }
+  .Historia:hover{
+    color: red;
+  }
+
+  .Lagar{
+    
+    
+    width: 30%;
+    border: 15px solid black;
+    padding: 100px;
+    margin: 20px;
+    position: relative;
+    float: left;
+   
+    font-size: 60px;
+    
+  }
+  .Lagar:hover{
+    color: red;
+  }
+
+  
+
+  
+
+
+
+
